--- a/paper/references.bib
+++ b/paper/references.bib
@@ -33,8 +33,8 @@
 
 @misc{storm,
 	author = {Apache Storm},
-	title = {http://storm.apache.org/documentation/Home.html},
-	url = {http://storm.apache.org/documentation/Home.html},
+	title = {https://storm.apache.org/},
+	url = {https://storm.apache.org/},
 }
 
 @article{cql,
